--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,16 @@
 name: MortisMissions
 version: '${project.version}'
-main: me.none030.mortismissions.MortisMissions
+main: com.mortisdevelopment.mortismissions.MortisMissions
 api-version: 1.13
 softdepend:
   - CrackShot
   - MythicMobs
   - QualityArmoryVehicles
+  - WeaponMechanics
+  - Brewery
 commands:
   missions:
     aliases:
       - mission
+      - mortismissions
+      - mortismission
